fix: Lengthen bottom margin to avoid overlap in mobile view

--- a/css/styles.css
+++ b/css/styles.css
@@ -449,7 +449,7 @@ em {
 
 .project-display {
   margin-top: 3%;
-  margin-bottom: 4%;
+  margin-bottom: 60px;
 }
 
 .project-container {
